; ModuleID = '/home/carl/AnghaBench/php-src/ext/soap/extr_php_sdl.c_delete_sdl_soap_binding_function_body.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/soap/extr_php_sdl.c_delete_sdl_soap_binding_function_body.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64)* @delete_sdl_soap_binding_function_body to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @delete_sdl_soap_binding_function_body(i64 %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_3__, align 8
  %4 = bitcast %struct.TYPE_3__* %3 to { i64, i64 }*
  %5 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %4, i32 0, i32 0
  store i64 %0, i64* %5, align 8
  %6 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %4, i32 0, i32 1
  store i64 %1, i64* %6, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = call i32 @efree(i64 %12)
  br label %14

14:                                               ; preds = %10, %2
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %14
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = call i32 @zend_hash_destroy(i64 %20)
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = call i32 @efree(i64 %23)
  br label %25

25:                                               ; preds = %18, %14
  ret void
}

declare dso_local i32 @efree(i64) #1

declare dso_local i32 @zend_hash_destroy(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
